--- a/app/globals.css
+++ b/app/globals.css
@@ -1,14 +1,29 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #0a0a0a;
+  --foreground: #ededed;
 
   --primary: #1e1e1e;
   --secondary: #2f2f2f;
   --border-primary: #1f1f1f;
   --text-primary: #d1d5db;  /* grey-300 */
   --text-secondary: #f3f4f6; /* grey-100 */
+  --text-theme: #ffffff;
+  --bg-theme: #ffffff;
+}
+
+html.light {
+  --background: #ffffff;
+  --foreground: #171717;
+
+  --primary: #ffffff;
+  --secondary: #f3f4f6;
+  --border-primary: #e5e7eb;
+  --text-primary: #1f2933;
+  --text-secondary: #374151;
+  --text-theme: #000000;
+  --bg-theme: #e5e7eb
 }
 
 @theme inline {
@@ -22,16 +37,10 @@
   --color-border-primary: var(--border-primary);
   --color-text-primary: var(--text-primary);
   --color-text-secondary: var(--text-secondary);
+  --color-text-theme: var(--text-theme);
+  --color-bg-theme: var(--bg-theme);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-
-
-  }
-}
 
 body {
   background: var(--background);
@@ -47,10 +56,3 @@ body {
 .hide-scrollbar::-webkit-scrollbar {
   display: none;            
 }
-
-/* h1 { font-size: 3rem; } /* 48px */
-/* h2 { font-size: 2.25rem; } /* 36px */
-/* h3 { font-size: 1.875rem; }   /* 30px */
-/* h4 { font-size: 1.5rem; }  /* 24px */
-/* h5 { font-size: 1.25rem; }     /* 20px */
-/* h6 { font-size: 1.125rem; } /* 18px */
